profilelist1exp/unpackaged/objects/eRate__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>eRate</relationshipLabel>
        <relationshipName>eRate</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_RFPs__c</fullName>
        <label>Associated RFPs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Work_Phone__c</fullName>
        <label>Contact Work Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address_of_Technical_Co__c</fullName>
        <label>Email Address of Technical Co</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lattice_Play__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lattice Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipLabel>eRate</relationshipLabel>
        <relationshipName>eRate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>eRate</relationshipLabel>
        <relationshipName>eRate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Applicant__c</fullName>
        <label>Name of Applicant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Technical_Contact__c</fullName>
        <label>Name of Technical Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted_Date__c</fullName>
        <label>Posted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Method_of_Contact__c</fullName>
        <label>Preferred Method of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Number_of_Technical__c</fullName>
        <label>Telephone Number of Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Form_URL__c</fullName>
        <label>View Form URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X470_App_Number__c</fullName>
        <label>470 App Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eRate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>eRate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eRate</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>